# rust-word-squares

./: .gitignore  Cargo.toml  README.md  make-bins.sh  make-doubles.rb  run-bins.sh  simple-wordlist.txt
src/: main.rs
